--- a/bootstrap/src/main/resources/skin/css/bootstrap.css
+++ b/bootstrap/src/main/resources/skin/css/bootstrap.css
@@ -4228,7 +4228,7 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .btn,
 .navbar .btn-group {
-  margin-top: 5px;
+  margin: 5px;
 }
 
 .navbar .btn-group .btn,
