--- a/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
+++ b/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
@@ -57,5 +57,57 @@ see http://stackoverflow.com/questions/10957781/google-maps-autocomplete-result-
 	    margin-right: 10px;
 	    display: block;
 	}
-
+	.pricedetailprod {
+    color: #78C042;
+	}
+	.more-view-product {
+    	margin: 15px 0;
+	}
+/* 	.more-view-product li { */
+/*     float: left; */
+/*     list-style-type: none; */
+/*     margin-right: 10px; */
+/* 	} */
+	.winkProduct {
+   	 margin: 0;
+	}
+	.head-like h5 {
+    	margin-top: 0;
+	}
+	.productlikers-photos ul {
+    	margin: 0;
+	}
+	#productLikers li {
+    float: left;
+    margin: 0 5px 7px 0;
+	}
+	.wrap-count-liker-wrap{	
+		background-color: #fff;
+	  	border: 1px solid #ccc;
+	  	border: 1px solid rgba(0, 0, 0, 0.2);
+	  	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+	     -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+	     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+	     padding:4px;
+	     width: 75px;
+	     height: 75px;
+	     float:left
+     }
+     
+     .count-liker-wrap{
+		background: #ffffff; /* Old browsers */
+		background: -moz-radial-gradient(center, ellipse cover,  #ffffff 0%, #eaeaea 100%); /* FF3.6+ */
+		background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#ffffff), color-stop(100%,#eaeaea)); /* Chrome,Safari4+ */
+		background: -webkit-radial-gradient(center, ellipse cover,  #ffffff 0%,#eaeaea 100%); /* Chrome10+,Safari5.1+ */
+		background: -o-radial-gradient(center, ellipse cover,  #ffffff 0%,#eaeaea 100%); /* Opera 12+ */
+		background: -ms-radial-gradient(center, ellipse cover,  #ffffff 0%,#eaeaea 100%); /* IE10+ */
+		background: radial-gradient(ellipse at center,  #ffffff 0%,#eaeaea 100%); /* W3C */
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#eaeaea',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+		padding: 16px;
+		text-align: center;
+		display:block;
+		}
+		.Count {
+   			 font-size: 24px;
+		}
 }
