--- a/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
+++ b/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
@@ -1,5 +1,14 @@
 /* Fix Bootstrap .modal compatibility with jQuery UI Autocomplete,
 see http://stackoverflow.com/questions/10957781/google-maps-autocomplete-result-in-bootstrap-modal-dialog */
+
+.listImageProd{
+width: 40%;	
+}
+
+#categories a{
+	color:gray;
+}
+
 .ui-autocomplete {
 	z-index: 1051 !important;
 }
@@ -122,42 +131,39 @@ a:hover {
 	text-decoration: none;
 }
 
-.navbar-inner {
-	background-color: #ffffff;
-	background-image: none;
-	box-shadow: none;
-	border: none;
-}
+/* .navbar-inner { */
+/* 	background-color: #ffffff; */
+/* 	background-image: none; */
+/* 	box-shadow: none; */
+/* 	border: none; */
+/* } */
 
 .navbar-fixed-top .navbar-inner,.navbar-static-top .navbar-inner {
 	box-shadow: none;
 }
 
 .top-nav {
-	background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff),
-		to(#f2f2f2) );
-	background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
-	background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
-	background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
-	background-repeat: repeat-x;
-	border: 1px solid #d4d4d4;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px 4px 4px 4px;
-	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffffff',
-		endColorstr='#fff2f2f2', GradientType=0 );
-	*zoom: 1;
-	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
-	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
+/* 	background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2); */
+/* 	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), */
+/* 		to(#f2f2f2) ); */
+/* 	background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2); */
+/* 	background-image: -o-linear-gradient(top, #ffffff, #f2f2f2); */
+/* 	background-image: linear-gradient(to bottom, #ffffff, #f2f2f2); */
+/* 	background-repeat: repeat-x; */
+/* 	border: 1px solid #d4d4d4; */
+/* 	-webkit-border-radius: 4px; */
+/* 	-moz-border-radius: 4px; */
+/* 	border-radius: 4px 4px 4px 4px; */
+/* 	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffffffff', */
+/* 		endColorstr='#fff2f2f2', GradientType=0 ); */
+/* 	*zoom: 1; */
+/* 	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065); */
+/* 	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065); */
+/* 	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065); */
 }
 /* .nav-collapse.collapse{ */
 /* 	overflow: visibles !important; */
 /* } */
-.carousel {
-	margin: -10px 0 20px 0;
-}
 
 .navbar {
 	margin-bottom: 20px;
@@ -853,6 +859,9 @@ margin-bottom:20px;
 	.last{
 		margin-right:0;
 	}
+	.navbar .brand {
+   	 padding: 0 5px;
+	}
 	
 }
 
@@ -1180,12 +1189,14 @@ margin-bottom:20px;
 		    margin-bottom:10px
 		}
 		.info-file {
-		    float: left;
-		    font-size: 11px;
+		 	float: left;
+		    margin-left: 10px;
+		    margin-top: 5px;
 		    overflow: hidden;
 		    text-overflow: ellipsis;
-		    width: 190px;
+		    width: 160px;
 		}
+		
 		.muted {
 		    color: #999999;
 		}
