--- a/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
+++ b/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
@@ -1,5 +1,13 @@
 /* Fix Bootstrap .modal compatibility with jQuery UI Autocomplete,
 see http://stackoverflow.com/questions/10957781/google-maps-autocomplete-result-in-bootstrap-modal-dialog */
+
+.form-horizontal .salesOrderInfo .control-label{
+	padding-top:0;	
+}
+.form-horizontal .salesOrderInfo .controls{
+	margin-left: 180px;
+}
+
 .subcat li{
 	list-style: disc outside none;
 	margin-left:15px;
