--- a/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
+++ b/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
@@ -1,12 +1,6 @@
 /* Fix Bootstrap .modal compatibility with jQuery UI Autocomplete,
 see http://stackoverflow.com/questions/10957781/google-maps-autocomplete-result-in-bootstrap-modal-dialog */
 
-.form-horizontal .salesOrderInfo .control-label{
-	padding-top:0;	
-}
-.form-horizontal .salesOrderInfo .controls{
-	margin-left: 180px;
-}
 
 .subcat li{
 	list-style: disc outside none;
@@ -324,13 +318,12 @@ a:hover {
 	border: 1px solid #ECECEC;
 	/* 	box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4); */
 	padding: 16px;
-	margin-right: 10px;
 }
 
 .selleroftheday-listprod li{
 	float: left;
-	margin: 0 10px 0 0;
-	width: 43.4%;
+	margin: 0 0  0 10px;
+	width: 44.1%;
 	list-style-type: none;
 	
 }
@@ -621,7 +614,7 @@ a:hover {
 
 .tophead .nav li.dropdown.open>.dropdown-toggle,.dropdown-toggle,.dropdown-toggle
 	{
-	background-color: #fff;
+/* 	background-color: #fff; */
 }
 
 .productImagesPanel {
@@ -673,11 +666,11 @@ a:hover {
 	width: 33%;
 }
 .selleroftheday-box{
-	width: 43.5%;
+	width: 43.8%;
 }
 .selleroftheday-listprod{
 	margin-left: 6px;
-    width: 48.2%;
+    width: 49%;
 }
 .selleroftheday-img{
 	width: 180px;
@@ -788,12 +781,12 @@ margin-bottom:20px;
 		    padding: 6px;
 		}
 		.selleroftheday-box {
-		    width: 43%;
+		    width: 43.7%;
 		}
 		.selleroftheday-listprod li{
 			float: left;
-			margin: 0 10px 0 0;
-			width: 43%;
+			margin: 0 0 0 10px;
+			width: 43.2%;
 			list-style-type: none;
 			
 		}
@@ -813,7 +806,6 @@ margin-bottom:20px;
 		.seller-profile {
 		    background-color: #F7F7F3;
 		    border: 1px solid #ECECEC;
-		    margin-right: 10px;
 		    padding: 14px;
 		}
 		.leftcol-productview {
@@ -848,25 +840,28 @@ margin-bottom:20px;
 	.selleroftheday-listprod li {
     float: left;
     list-style-type: none;
-    margin: 0 10px 0 0;
+    margin: 0 0 0 10px;
     width: 39%;
 	}
 	.seller-profile-list-prod {
     background-color: #F7F7F3;
     border: 1px solid #ECECEC;
-    padding: 6px;
+    padding: 5px;
+	}
+	
+	.selleroftheday-listprod {
+    	width: 49.4%;
 	}
 	.seller-profile {
     background-color: #F7F7F3;
     border: 1px solid #ECECEC;
-    margin-right: 10px;
     padding: 8px;
 	}
 	.selleroftheday-listprod li {
-    float: left;
-    list-style-type: none;
-    margin: 0 10px 0 0;
-    width: 41%;
+	    float: left;
+	    list-style-type: none;
+	    margin: 0 0 0 8px;
+	    width: 42.7%;
 	}
 	
 	.wrapper-item-newproducts {
