--- a/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
+++ b/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
@@ -1,6 +1,10 @@
 /* Fix Bootstrap .modal compatibility with jQuery UI Autocomplete,
 see http://stackoverflow.com/questions/10957781/google-maps-autocomplete-result-in-bootstrap-modal-dialog */
 
+.badgeCart{
+	margin: -47px 0 0 57px;
+    position: absolute;
+}
 .wellRio{
   padding: 10px;
   background-color: #f5f5f5;
