--- a/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
+++ b/bootstrap/src/main/resources/skin/css/bootstrap-patches.css
@@ -53,11 +53,11 @@ see http://stackoverflow.com/questions/10957781/google-maps-autocomplete-result-
 }
 .wellRio{
   padding: 10px;
-  background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+/*   background-color: #f5f5f5; */
+/*   border: 1px solid #e3e3e3; */
+/*   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); */
+/*      -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); */
+/*           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05); */
 }
 .subcat li{
 	list-style: disc outside none;
